# codellm-devkit

./: .gitignore  README.md  pyproject.toml
cldk/: core.py
cldk/analysis/java/: java.py
cldk/analysis/java/codeanalyzer/: codeanalyzer.py
cldk/analysis/java/treesitter/: __init__.py
cldk/models/java/: models.py
docs/examples/cldk-demo/: README.md  pyproject.toml
docs/examples/cldk-demo/cldk_demo/java/: code_summary.py  test_generation.py
docs/examples/cldk-demo/cldk_demo/python/: code_summary.py  test_generation.py
docs/examples/cldk-demo/cldk_demo/utils/: helpers.py
docs/examples/notebooks/: Test Generation Demo.ipynb  single_file_analysis.ipynb
docs/examples/notebooks/.ipynb_checkpoints/: Test Generation Demo-checkpoint.ipynb
